tested create-pitch api

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=3000
-MONGO_URI=mongodb+srv://Sanchit:1234@cluster0.jano3fg.mongodb.net/Backend
+# MONGO_URI=mongodb+srv://Sanchit:1234@cluster0.jano3fg.mongodb.net/Backend
 JWT_SECRET=Server@2321123
-# MONGO_URI=mongodb+srv://akanksha:pitchit123@cluster0.amwyeo2.mongodb.net/pitchit
+MONGO_URI=mongodb+srv://akanksha:1234@cluster0.amwyeo2.mongodb.net/pitchit
